--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
 	<link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
 	<meta charset="utf-8" />
+	<meta name="description" content="A simple to-do list with an old-fashioned UI.">
 	<meta name="msapplication-TileColor" content="#00aba9">
 	<meta name="theme-color" content="#ffffff">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
